--- a/index.html
+++ b/index.html
@@ -301,12 +301,10 @@
 
         <footer>
 
-            <div>
-            <picture>
+            <div id="primeraLinea">
+            <picture id="logo">
                 <img src="./img/ecolife.svg" alt="Eco-life">
             </picture>
-            </div>
-            <div>
             <ul id="redes">
                 <li><a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
